# clang-demo

./: .clang-format  .clang-tidy  .commitlintrc.mjs  .editorconfig  .gitignore  .markdownlint.yml  .prettierrc  CHANGELOG.md  CMakeLists.txt  README.md  manifest.json
.github/: commitlint.config.mjs  labels.yml
.github/workflows/: commitlint.yml
example/: README.md
example/mdsanima-awesome/: README.md  main.c
example/mdsanima-awesome/src/: main.cpp
example/mdsanima-cprogram/: README.md
example/mdsanima-cprogram/src/: main.c
example/mdsanima-deeply/: main.c
example/mdsanima-fantastic/: README.md  lib.cc  lib.hh  main.cc
example/mdsanima-incredible/: lib.cpp  lib.hpp  main.cpp
example/mdsanima-remarkable/: README.md
example/mdsanima-remarkable/src/: main.cpp
example/mdsanima-stunning/: lib.cxx  lib.hxx  main.cxx
lib/: mdsanima.c  mdsanima.h
project/mdsanima-amarok/: main.c  mdsanima.c  mdsanima.h
project/mdsanima-amarooke/: main.c
project/mdsanima-blizzard/: main.c
project/mdsanima-conquest/: main.c
